# 999MDG

./: .gitignore  CMakeLists.txt  PRD_BACKTEST_ENGINE.md  PRD_OPTIMIZER.md  PRD_V3.md  README.md  conanfile.py  test_optimize.json
audit/: generate_lookahead_test_data.py  test_no_lookahead.sh
configs/: _opt_smoke.json  _opt_smoke2.json  _repro_blowup.json  btc.json  btc_meanrev.json  btc_meanrev2.json  schema.json  template.json  test_backtest.json
docs/: PRD-fix-backtest-results.md  architecture.md  closes_algo.md  entries_algo.md  entry_condition.md  loss_modules.md
scripts/: install_gnuplot.sh  json_collapse_arrays.py  run_benchmark.sh
src/: CMakeLists.txt  debug_log.h  main.cpp
src/config/: loader.cpp  loader.h  types.h
src/data/: binance_client.cpp  binance_client.h  cache.cpp  cache.h  candle.h  candle_manager.cpp  candle_manager.h  symbol_info.cpp  symbol_info.h
src/metrics/: calculator.cpp  calculator.h  types.h
src/optimizer/: nsga2.cpp  nsga2.h  optimizer.cpp  optimizer.h  types.h
src/plot/: colors.h  plotter.cpp  plotter.h
src/strategy/: close_grid.cpp  close_grid.h  entry_grid.cpp  entry_grid.h  parkinson_volatility.cpp  parkinson_volatility.h  stop_loss.cpp  stop_loss.h  strategy.cpp  strategy.h  types.h  unstuck.cpp  unstuck.h
src/strategy/modules/: module_context.h
src/strategy/modules/closes_algo/: closes_algo.cpp  closes_algo.h  graduated_tp.cpp  graduated_tp.h  mean_revert_tp.cpp  mean_revert_tp.h  simple_grid.cpp  simple_grid.h
src/strategy/modules/entries_algo/: dca_linear.cpp  dca_linear.h  entries_algo.cpp  entries_algo.h  martingale.cpp  martingale.h
src/strategy/modules/entry_condition/: bb_reversion.cpp  bb_reversion.h  ema_dist_pct.cpp  ema_dist_pct.h  entry_condition.cpp  entry_condition.h  zscore_ou.cpp  zscore_ou.h
src/strategy/modules/loss_modules/: atr_stop.cpp  atr_stop.h  legacy_stop_loss.cpp  legacy_stop_loss.h  legacy_unstuck.cpp  legacy_unstuck.h  loss_module.cpp  loss_module.h  time_stop.cpp  time_stop.h  z_stop.cpp  z_stop.h
src/ui/: tui.cpp  tui.h
src/utils/: thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt  test_config.cpp  test_constraint_sort.cpp  test_metrics.cpp  test_metrics_invariants.cpp  test_strategy.cpp
